# abrid

./: .coverage  .env.example  .gitignore  Dockerfile  Makefile  PROMPT_HISTORY.md  README.md  SKILL.md  docker-compose.yml  pom.xml  pyproject.toml
.github/workflows/: ci.yml
oncf_transit/: __init__.py
oncf_transit/api/: __init__.py  main.py
oncf_transit/core/: __init__.py  gtfs_loader.py  models.py  search.py  store.py  time_utils.py
scripts/: ingest.py
src/main/java/ma/mobility/abrid/: AbridApplication.java
src/main/java/ma/mobility/abrid/agent/: AgentTools.java  CorrectionToolResult.java  DisruptionToolResult.java  ScheduleToolResult.java  StationToolResult.java  TripToolResult.java
src/main/java/ma/mobility/abrid/api/: GlobalExceptionHandler.java  TripController.java
src/main/java/ma/mobility/abrid/api/dto/: DisruptionDto.java  JourneyDto.java  LegDto.java  PlanTripResponse.java  StationDto.java
src/main/java/ma/mobility/abrid/config/: DataFreshnessHealthIndicator.java  IngestionScheduler.java  McpServerConfig.java  OtpConfig.java  SchedulingConfig.java
src/main/java/ma/mobility/abrid/core/loader/: CoverageReport.java  GtfsLoader.java  InsufficientCoverageException.java
src/main/java/ma/mobility/abrid/core/model/: Journey.java  Leg.java  Mode.java  Station.java
src/main/java/ma/mobility/abrid/core/search/: AmbiguousStationException.java  JourneySearchPort.java  NoDataException.java  OtpJourneySearchService.java  SearchService.java  StationNotFoundException.java
src/main/java/ma/mobility/abrid/ingestion/: IngestRunner.java
src/main/java/ma/mobility/abrid/realtime/: Disruption.java  DisruptionCollector.java  DisruptionService.java  DisruptionSeverity.java  DisruptionType.java
src/main/resources/: application.properties  application.yml
src/main/resources/db/migration/: V1__initial_schema.sql  V2__add_disruptions.sql  V4__add_corrections.sql
src/main/resources/db/migration/postgresql/: V3__add_postgis_geometry.sql
src/test/java/ma/mobility/abrid/: ArchUnitTest.java  TestGtfsData.java
src/test/java/ma/mobility/abrid/agent/: AgentToolsTest.java
src/test/java/ma/mobility/abrid/api/: TripControllerTest.java
src/test/java/ma/mobility/abrid/core/: SearchServiceTest.java  TimeUtilsTest.java
src/test/java/ma/mobility/abrid/integration/: IngestionIntegrationTest.java
src/test/resources/: application-test.yml  application.properties
src/test/resources/db/: test-schema.sql
tests/: test_real_gtfs.py  test_search.py
(+5 files in other folders)
