[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abrid"
version = "0.1.0"
description = "Assistant de mobilité multimodal pour le Maroc"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["maroc", "transport", "mobilité", "oncf", "gtfs"]

dependencies = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.3",
    "pydantic==2.8.2",
    "httpx==0.27.0",
    "sqlalchemy==2.0.31",
    "alembic==1.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "ruff==0.5.4",
    "mypy==1.11.0",
]

[project.scripts]
abrid-ingest = "scripts.ingest:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oncf_transit*", "scripts*"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "B008",  # do not perform function calls in default arguments (FastAPI Depends)
    "N806",  # variable in function should be lowercase (false pos. sur _GTFS_TIME_RE etc.)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert OK dans les tests

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "oncf_transit.core.*"
strict = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=oncf_transit --cov-report=term-missing --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["oncf_transit"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
